fixed styles for marker info box   - no longer has scrollbar when hovering over last link

--- a/css/map.css
+++ b/css/map.css
@@ -57,6 +57,10 @@
     cursor: pointer;
 }
 
+.marker-content {
+  margin: 2px;
+}
+
 .map {
 	float: right;
 	width: 74%;
